VI-113 Heder bug in Safari. hidden-xs is visible and a small menu shift

--- a/docroot/themes/custom/site/src/scss/custom/components/_header.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_header.scss
@@ -139,7 +139,7 @@
   .layout__header-row--bottom {
     @include layout-header-row-height(67px, 67px, 67px);
     border-bottom: 1px solid $border-color;
-    background-color: #fff;
+    background-color: rgb(3,188,255);
 
     .layout-navigation {
 
@@ -229,7 +229,7 @@
   .layout__header-row {
     padding-left: 105px;
     padding-right: 0;
-    flex-wrap: wrap;
+    //flex-wrap: wrap;
   }
 
   .layout__header-logo {
@@ -242,6 +242,10 @@
 
   .layout-navigation__link__icon {
     max-width: 68px;
+  }
+  
+  .layout__header-row.layout__header-row--top.hidden-xs{
+    flex-wrap: wrap;
   }
 }
 
@@ -563,6 +567,11 @@
         }
       }
     }
+  }
+  // Header
+
+  .layout__header-row.layout__header-row--top.hidden-xs{
+    display: none !important;
   }
 }
 
